--- a/web/src/main/stylesheets/app.less
+++ b/web/src/main/stylesheets/app.less
@@ -1,11 +1,16 @@
 body {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
+  background-color: #e1e8ed;
+}
+
+.handle {
+  color: #8899a6;
 }
 
 .search-container {
   margin-top: 100px;
-  padding-left: 40%;
+  margin-left: 40%;
 }
 
 .react-autosuggest__container {
@@ -83,10 +88,6 @@ body {
     .name {
       font-weight: bold;
       padding-bottom: 2px;
-    }
-
-    .handle {
-      color: #8899a6;
     }
   }
 }
