Styling of Klout score

--- a/web/src/main/stylesheets/user.less
+++ b/web/src/main/stylesheets/user.less
@@ -2,11 +2,30 @@
   margin-left: 36%;
   margin-top: 30px;
 
-  .user-card {
+  .card {
     border: 1px solid #e1e8ed;
     border-radius: 4px;
     width: 500px;
     background-color: white;
+    margin-bottom: 10px;
+  }
+
+  .card-label {
+    background-color: #999;
+    color: white;
+    padding: 8px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+  }
+
+  .klout-score {
+    .klout-score-value {
+      display: inline-block;
+      font-weight: bold;
+      font-size: 2em;
+      margin-left: 20px;
+      padding: 10px;
+    }
   }
 
   .user-profile-container {
