Styling for influences sections

--- a/web/src/main/stylesheets/user.less
+++ b/web/src/main/stylesheets/user.less
@@ -28,6 +28,29 @@
     }
   }
 
+  .influence-container {
+    padding: 15px 0;
+    .influence-item {
+      padding: 5px 20px;
+
+      .user-container {
+        width: 355px;
+      }
+
+      .klout-score-value {
+        font-weight: bold;
+        font-size: 1.5em;
+        vertical-align: top;
+        margin-top: 15px;
+      }
+
+      &:hover {
+        background-color: #eee;
+        cursor: pointer;
+      }
+    }
+
+  }
   .user-profile-container {
     background-color: #1DA1F2;
     height: 30px;
