Color Klout depending on value

--- a/web/src/main/stylesheets/user.less
+++ b/web/src/main/stylesheets/user.less
@@ -1,3 +1,15 @@
+.klout-high {
+  color: green;
+}
+
+.klout-medium {
+  color: #FF6500;
+}
+
+.klout-low {
+  color: #DC143C;
+}
+
 .selected-user-container {
   margin-left: 36%;
   margin-top: 30px;
