Show loading animation and friendly message if Klout does not load

--- a/web/src/main/stylesheets/user.less
+++ b/web/src/main/stylesheets/user.less
@@ -61,7 +61,12 @@
         cursor: pointer;
       }
     }
+  }
 
+  .klout-failed {
+    .message {
+      padding: 20px;
+    }
   }
   .user-profile-container {
     background-color: #1DA1F2;
