--- a/web/src/main/stylesheets/app.less
+++ b/web/src/main/stylesheets/app.less
@@ -4,6 +4,28 @@ body {
   background-color: #e1e8ed;
 }
 
+.loading {
+    border: 5px solid #f3f3f3;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    border-top: 5px solid #555;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-left: 220px;
+    margin-top: 20px;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .handle {
   color: #8899a6;
 }
