Added title, description and footer

--- a/web/src/main/stylesheets/app.less
+++ b/web/src/main/stylesheets/app.less
@@ -2,8 +2,43 @@ body {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
   background-color: #e1e8ed;
+  height: 100%;
 }
 
+.app-root {
+   min-height:100%;
+   position:relative;
+   padding-bottom: 40px;
+}
+
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:30px;
+   margin-left: 50%;
+   margin-top: 20px;
+   font-size: 0.8em;
+   color: #8899a6;
+}
+
+.header {
+  .title {
+    font-weight: bold;
+    font-size: 2em;
+    margin-left: 43%;
+    margin-top: 50px;
+    color: #333;
+  }
+
+  .description {
+    margin-top: 20px;
+    margin-left: 40%;
+    width: 400px;
+    color: #888;
+  }
+
+}
 .loading {
     border: 5px solid #f3f3f3;
     -webkit-animation: spin 1s linear infinite;
